--- a/Lalisa-page/assets/css/index.css
+++ b/Lalisa-page/assets/css/index.css
@@ -130,8 +130,8 @@ a:hover {
 
 .box_banner_photo {
   margin-top: -40px;
-  max-width: 1240px;
-  max-height: 480px;
+  width: 100%;
+  height: auto;
 }
 .box_banner_photo img {
   width: 100%;
@@ -180,12 +180,17 @@ a:hover {
 
 .list_product {
   margin-top: 50px;
+  width: 100%;
+  height: auto;
+}
+.list_product .swiper-slide {
+  text-align: center;
+  width: 394px !important;
 }
 
 .box_product .product_picture {
-  margin: auto;
   width: 394px;
-  height: 360px;
+  height: auto;
 }
 .box_product .product_picture img {
   width: 100%;
@@ -210,9 +215,20 @@ a:hover {
   font-size: 24px;
 }
 
-.box_product.slick-slide {
-  width: 394px !important;
-  margin-right: 29px;
+.swiper-button-next::after {
+  content: "";
+  background-image: url("/assets/img/next_btn.png");
+  background-repeat: no-repeat;
+  padding: 18px 18px;
+  background-size: 100% 100%;
+}
+
+.swiper-button-prev::after {
+  content: "";
+  background-image: url("/assets/img/prev_btn.png");
+  background-repeat: no-repeat;
+  padding: 18px 18px;
+  background-size: 100% 100%;
 }
 
 /*===============End Products==============*/
@@ -226,7 +242,6 @@ a:hover {
 
 .box_about_product {
   margin-top: 14px;
-  justify-content: space-between;
 }
 
 .content_product .title_our_product {
@@ -241,8 +256,8 @@ a:hover {
 }
 .content_product .feature_img {
   margin-top: 50px;
-  max-width: 595px;
-  max-height: 260px;
+  width: 100%;
+  height: auto;
 }
 .content_product .feature_img img {
   width: 100%;
@@ -266,8 +281,8 @@ a:hover {
 }
 
 .archive_img {
-  max-width: 595px;
-  max-height: 510px;
+  width: 100%;
+  height: auto;
   margin-top: 57px;
   overflow: hidden;
 }
@@ -335,56 +350,56 @@ a:hover {
 
 .box_feature_img {
   margin-top: 50px;
-  position: relative;
 }
 .box_feature_img .feature_photo {
-  max-width: 582px;
-  max-height: 565px;
+  width: 100%;
   overflow: hidden;
+  position: relative;
 }
 .box_feature_img .feature_photo img {
   width: 100%;
 }
-.box_feature_img .box_title_articles {
+.box_feature_img .box_button {
+  box-shadow: 0px 4px 90px rgba(175, 173, 181, 0.2);
   position: absolute;
-  bottom: 26px;
-  left: 26px;
+  right: 48px;
 }
-.box_feature_img .box_title_articles .cate_articles .description_text {
+.box_feature_img .box_button .btn_group:nth-child(1) {
+  background: #FFFFFF;
+}
+
+.box_title_articles {
+  position: absolute;
+  bottom: 200px;
+  left: 40px;
+}
+.box_title_articles .cate_articles .description_text {
   color: #FFFFFF;
 }
-.box_feature_img .box_title_articles .name_articles {
+.box_title_articles .name_articles {
   margin-top: 10px;
 }
-.box_feature_img .box_title_articles .name_articles .title_text {
+.box_title_articles .name_articles .title_text {
   font-size: 26px;
   color: #FFFFFF;
 }
-.box_feature_img .box_title_articles .detail_articles {
+.box_title_articles .detail_articles {
   margin-top: 6px;
   padding: 0px 72px 0px 0px;
 }
-.box_feature_img .box_title_articles .detail_articles .description_text {
+.box_title_articles .detail_articles .description_text {
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
-.box_feature_img .box_title_articles .article_link {
+.box_title_articles .article_link {
   margin-top: 14px;
 }
-.box_feature_img .box_title_articles .article_link .title_text {
+.box_title_articles .article_link .title_text {
   color: #FFFFFF;
   font-size: 18px;
   font-weight: 500;
-}
-.box_feature_img .box_button {
-  box-shadow: 0px 4px 90px rgba(175, 173, 181, 0.2);
-  position: absolute;
-  right: 23px;
-}
-.box_feature_img .box_button .btn_group:nth-child(1) {
-  background: #FFFFFF;
 }
 
 .box_blog {
@@ -392,13 +407,11 @@ a:hover {
   align-items: center;
 }
 .box_blog .blog_picture {
-  width: 260px;
-  height: 260px;
+  width: 100%;
   margin-right: 50px;
 }
 .box_blog .blog_picture img {
-  max-width: 260px;
-  max-height: 260px;
+  width: 100%;
 }
 
 .small_blog {
@@ -477,17 +490,46 @@ a:hover {
 }
 .box_services .title_services .title_text {
   font-size: 20px;
+  white-space: nowrap;
 }
 .box_services .list_services .description_text {
   color: #151411;
   margin-bottom: 12px !important;
   line-height: 180%;
+  white-space: nowrap;
 }
 
 /* custom bootstrap */
 @media (min-width: 1440px) {
   .container {
     max-width: 1320px;
+  }
+}
+@media (max-width: 992px) {
+  .navbar-expand-lg .navbar-nav {
+    align-items: center;
+  }
+  .navbar-expand-lg .navbar-nav li.nav-item {
+    margin-right: 0px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .box_archivement_mobile {
+    display: flex;
+    margin-top: 30px;
+    justify-content: space-around;
+  }
+  .product_numb {
+    margin-top: 100px;
+  }
+  .product_numb .box_archivement {
+    display: none;
+  }
+  .box_feature_img .feature_photo {
+    overflow: hidden;
+  }
+  .small_list_blog {
+    margin-top: 50px;
   }
 }
 @media screen and (max-width: 1023px) {
@@ -504,17 +546,6 @@ a:hover {
   .box_banner_text .banner_title_text {
     font-size: 60px;
   }
-  .box_archivement_mobile {
-    display: flex;
-    margin-top: 30px;
-    justify-content: space-around;
-  }
-  .box_archivement {
-    display: none;
-  }
-  .box_about_product {
-    flex-direction: column;
-  }
   .box_about_product .content_product .title_our_product {
     max-width: unset;
   }
@@ -530,13 +561,125 @@ a:hover {
   }
   .box_about_product .content_product .feature_img {
     margin-top: 50px;
-    max-width: unset;
-    max-height: unset;
   }
   .product_numb .archive_img {
     max-width: unset;
   }
-  .list_blog {
+  .box_feature_img .box_button {
+    display: none;
+  }
+  .box_aboutus .box_services {
+    margin-top: 30px;
+  }
+  .box_aboutus .box_services .detial_service {
+    margin-left: 50px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .discount {
     flex-direction: column;
+  }
+  .discount .button_discount {
+    margin-top: 16px;
+  }
+  .author_blog .date_create {
+    display: none;
+  }
+  .box_aboutus {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .box_aboutus .description_text {
+    color: #AFADB5 !important;
+    font-size: 14px;
+  }
+  .box_services .detial_service {
+    margin-right: 50px;
+    margin-left: 0px;
+  }
+}
+@media screen and (max-width: 599px) {
+  .block_title {
+    font-size: 14px;
+  }
+  .title_text {
+    font-size: 26px;
+  }
+  .description_text {
+    font-size: 14px;
+  }
+  .btn_group {
+    padding: 15px 26px;
+    font-size: 14px;
+  }
+  .block_header {
+    padding: 20px 0;
+  }
+  .block_banner,
+.block_benefits,
+.block_product,
+.block_our_product,
+.block_testimonials,
+.block_artickes {
+    margin-top: 50px;
+  }
+  .box_banner_photo {
+    margin-top: 30px;
+  }
+  .small_box_archivement {
+    margin: auto;
+  }
+  .num_archivement .title_text {
+    font-size: 22px;
+  }
+  .detail_archivement .description_text {
+    font-size: 14px;
+  }
+  .product_numb {
+    margin-top: 0px;
+  }
+  .box_title_articles .cate_articles .description_text {
+    font-size: 12px;
+  }
+  .box_title_articles .name_articles .title_text {
+    font-size: 16px;
+  }
+  .box_title_articles .detail_articles .description_text {
+    font-size: 14px;
+  }
+  .box_title_articles .article_link .title_text {
+    font-size: 12px;
+  }
+  .detail_blog .cate_blog .description_text {
+    font-size: 12px;
+  }
+  .detail_blog .content_blog {
+    display: none;
+  }
+  .detail_blog .name_blog {
+    margin-top: 4px;
+  }
+  .detail_blog .name_blog .title_text {
+    font-size: 16px;
+  }
+  .detail_blog .author_blog {
+    margin-top: 18px;
+  }
+  .detail_blog .author_blog .title_text {
+    font-size: 12px;
+  }
+  .block_footer .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .box_services .detial_service {
+    margin-right: 10%;
+    margin-left: 0px !important;
+  }
+  .box_services .detial_service .title_text {
+    font-size: 16px;
+  }
+  .box_services .detial_service .description_text {
+    font-size: 14px;
   }
 }
