--- a/Lalisa-page/assets/scss/footer.scss
+++ b/Lalisa-page/assets/scss/footer.scss
@@ -33,6 +33,7 @@
 
         .title_text {
             font-size: 20px;
+            white-space: nowrap;
         }
     }
 
@@ -42,6 +43,7 @@
             color: #151411;
             margin-bottom: 12px !important;
             line-height: 180%;
+            white-space: nowrap;
         }
     }
 }
