--- a/Lalisa-page/assets/scss/product.scss
+++ b/Lalisa-page/assets/scss/product.scss
@@ -77,10 +77,12 @@
 
         .banner_pic {
             width: 100%;
-            height: auto;
+            height: 500px;
+            object-fit: fill;
 
             img {
                 width: 100%;
+                height: 100%;
             }
         }
     }
@@ -224,9 +226,11 @@
 
     .product_picture {
         width: 100%;
-        height: auto;
+        height: 360px;
+        object-fit: fill;
 
         img {
+            height: 100%;
             width: 100%;
             text-align: center;
         }
