--- a/Lalisa-page/assets/scss/index.scss
+++ b/Lalisa-page/assets/scss/index.scss
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Eudoxus Sans';
-    src: url("/assets/fonts/EudoxusSans-Medium.ttf");
+    src: url("../fonts/EudoxusSans-Medium.ttf");
 }
 
 @font-face {
     font-family: 'Slick';
-    src: url("/assets/fonts/slick.ttf");
+    src: url("../fonts/slick.ttf");
 }
 
 @import "header";
