--- a/Lalisa-page/assets/scss/main.scss
+++ b/Lalisa-page/assets/scss/main.scss
@@ -92,12 +92,12 @@
     margin-top: -40px;
     width: 100%;
     height: 480px;
-    object-fit: fill;
     overflow: hidden;
 
     img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
     }
 }
 
@@ -113,7 +113,12 @@
 }
 
 .box_benefits_title {
+    margin-top: 14px;
     max-width: 427px;
+}
+
+.detail_benefit {
+    margin-top: 50px;
 }
 
 .box_benefit {
@@ -172,12 +177,12 @@
     .product_picture {
         width: 394px;
         height: 360px;
-        object-fit: fill;
 
         img {
             width: 100%;
             height: 100%;
             text-align: center;
+            object-fit: contain;
         }
     }
 
@@ -260,11 +265,11 @@
         margin-top: 50px;
         width: 100%;
         height: 260px;
-        object-fit: fill;
 
         img {
             height: 100%;
             width: 100%;
+            object-fit: contain;
         }
     }
 }
@@ -293,11 +298,11 @@
     height: 510px;
     margin-top: 57px;
     overflow: hidden;
-    object-fit: fill;
 
     img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
     }
 }
 
@@ -385,13 +390,14 @@
     .feature_photo {
         width: 100%;
         height: 565px;
-        object-fit: fill;
         overflow: hidden;
         position: relative;
 
         img {
             width: 100%;
             height: 100%;
+            object-fit: contain;
+
         }
     }
 
