--- a/Lalisa-page/assets/scss/product.scss
+++ b/Lalisa-page/assets/scss/product.scss
@@ -78,11 +78,11 @@
         .banner_pic {
             width: 100%;
             height: 500px;
-            object-fit: fill;
 
             img {
                 width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
         }
     }
@@ -227,12 +227,12 @@
     .product_picture {
         width: 100%;
         height: 360px;
-        object-fit: fill;
 
         img {
             height: 100%;
             width: 100%;
             text-align: center;
+            object-fit: cover;
         }
     }
 
