--- a/Lalisa-page/assets/css/index.css
+++ b/Lalisa-page/assets/css/index.css
@@ -144,7 +144,7 @@ a:hover {
 .box_banner_photo {
   margin-top: -40px;
   width: 100%;
-  height: 480px;
+  max-height: 480px;
   overflow: hidden;
 }
 .box_banner_photo img {
@@ -162,6 +162,10 @@ a:hover {
 .box_benefits_title {
   margin-top: 14px;
   max-width: 427px;
+}
+
+.box_benefits_des {
+  margin-top: 23px;
 }
 
 .detail_benefit {
@@ -209,7 +213,7 @@ a:hover {
 
 .box_product .product_picture {
   width: 394px;
-  height: 360px;
+  max-height: 360px;
 }
 .box_product .product_picture img {
   width: 100%;
@@ -236,20 +240,19 @@ a:hover {
   font-size: 24px;
 }
 
-.swiper-button-next::after {
-  content: "";
-  background-image: url("/assets/img/next_btn.png");
-  background-repeat: no-repeat;
-  padding: 18px 18px;
-  background-size: 100% 100%;
+.slick-prev,
+.slick-next {
+  z-index: 1;
+  width: 40px;
+  height: 40px;
 }
 
-.swiper-button-prev::after {
-  content: "";
-  background-image: url("/assets/img/prev_btn.png");
-  background-repeat: no-repeat;
-  padding: 18px 18px;
-  background-size: 100% 100%;
+.slick-next {
+  right: 62px;
+}
+
+.slick-prev {
+  left: 62px;
 }
 
 /*===============End Products==============*/
@@ -265,6 +268,11 @@ a:hover {
   margin-top: 14px;
 }
 
+.content_product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .content_product .title_our_product {
   max-width: 511px;
 }
@@ -278,12 +286,18 @@ a:hover {
 .content_product .feature_img {
   margin-top: 50px;
   width: 100%;
-  height: 260px;
+  max-height: 260px;
 }
 .content_product .feature_img img {
   height: 100%;
   width: 100%;
   object-fit: contain;
+}
+
+.product_numb {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .box_archivement_mobile {
@@ -305,7 +319,7 @@ a:hover {
 
 .archive_img {
   width: 100%;
-  height: 510px;
+  max-height: 510px;
   margin-top: 57px;
   overflow: hidden;
 }
@@ -368,29 +382,36 @@ a:hover {
 .block_artickes .list_blog {
   margin-top: 14px;
 }
+.block_artickes .list_blog .col-xl-6.big_blog {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.block_artickes .list_blog .col-xl-6.small_list_blog {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .des_artickes {
   margin-top: 30px;
 }
 
-.box_feature_img {
-  margin-top: 50px;
-}
 .box_feature_img .feature_photo {
   width: 100%;
-  height: 565px;
+  max-height: 565px;
   overflow: hidden;
   position: relative;
 }
 .box_feature_img .feature_photo img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 .box_feature_img .box_button {
   box-shadow: 0px 4px 90px rgba(175, 173, 181, 0.2);
   position: absolute;
-  right: 48px;
+  right: 15px;
 }
 .box_feature_img .box_button .btn_group:nth-child(1) {
   background: #FFFFFF;
@@ -398,7 +419,7 @@ a:hover {
 
 .box_title_articles {
   position: absolute;
-  bottom: 250px;
+  bottom: 100px;
   left: 40px;
 }
 .box_title_articles .cate_articles .description_text {
@@ -419,6 +440,7 @@ a:hover {
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 1;
+  color: #FFFFFF;
   -webkit-box-orient: vertical;
 }
 .box_title_articles .article_link {
@@ -436,16 +458,23 @@ a:hover {
 }
 .box_blog .blog_picture {
   width: 100%;
-  margin-right: 50px;
+  flex-shrink: 1;
 }
 .box_blog .blog_picture img {
   width: 100%;
 }
 
-.small_blog {
-  margin-bottom: 30px;
+.small_blog:nth-child(2) {
+  margin-top: 30px;
+}
+.small_blog:nth-child(3) {
+  margin-top: 30px;
 }
 
+.detail_blog {
+  margin-left: 50px;
+  flex-shrink: 1;
+}
 .detail_blog .name_blog {
   margin-top: 21px;
 }
@@ -528,6 +557,7 @@ a:hover {
   .box_banner_text .banner_title_text {
     font-size: 60px;
   }
+  /*===============Start Our Product ============*/
   .box_about_product .content_product .des_our_product {
     margin-top: 50px;
   }
@@ -658,6 +688,7 @@ a:hover {
 
 .box_services {
   display: flex;
+  justify-content: space-around;
 }
 .box_services .detial_service {
   margin-left: 104px;
@@ -704,7 +735,7 @@ a:hover {
     padding-left: 15px;
   }
   .box_services .detial_service {
-    margin-right: 10%;
+    margin-right: 3%;
     margin-left: 0px !important;
   }
   .box_services .detial_service .title_text {
