--- a/Lalisa-page/assets/scss/main.scss
+++ b/Lalisa-page/assets/scss/main.scss
@@ -91,7 +91,7 @@
 .box_banner_photo {
     margin-top: -40px;
     width: 100%;
-    height: 480px;
+    max-height: 480px;
     overflow: hidden;
 
     img {
@@ -115,6 +115,10 @@
 .box_benefits_title {
     margin-top: 14px;
     max-width: 427px;
+}
+
+.box_benefits_des {
+    margin-top: 23px;
 }
 
 .detail_benefit {
@@ -176,7 +180,7 @@
 
     .product_picture {
         width: 394px;
-        height: 360px;
+        max-height: 360px;
 
         img {
             width: 100%;
@@ -211,22 +215,21 @@
     } 
 }
 
-.swiper-button-next::after {
-    content: "";
-    background-image: url("/assets/img/next_btn.png");
-    background-repeat: no-repeat;
-    padding: 18px 18px;
-    background-size: 100% 100%;
+.slick-prev, 
+.slick-next {
+    z-index: 1;
+    width: 40px;
+    height: 40px;
 }
 
-.swiper-button-prev::after {
-    content: "";
-    background-image: url("/assets/img/prev_btn.png");
-    background-repeat: no-repeat;
-    padding: 18px 18px;
-    background-size: 100% 100%;
+.slick-next {
+    right: 62px;
 }
-    
+
+.slick-prev {
+    left: 62px;
+} 
+     
 
 
 /*===============End Products==============*/
@@ -246,6 +249,9 @@
 }
 
 .content_product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .title_our_product {
         max-width: 511px;
@@ -264,7 +270,7 @@
     .feature_img {
         margin-top: 50px;
         width: 100%;
-        height: 260px;
+        max-height: 260px;
 
         img {
             height: 100%;
@@ -272,6 +278,12 @@
             object-fit: contain;
         }
     }
+}
+
+.product_numb {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .box_archivement_mobile {
@@ -295,7 +307,7 @@
 
 .archive_img {
     width: 100%;
-    height: 510px;
+    max-height: 510px;
     margin-top: 57px;
     overflow: hidden;
 
@@ -376,27 +388,39 @@
 
     .list_blog {
         margin-top: 14px;
+
+        .col-xl-6.big_blog {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .col-xl-6.small_list_blog {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
     }
 }
+
+
 
 .des_artickes {
     margin-top: 30px;
 }
 
 .box_feature_img {
-    margin-top: 50px;
-
 
     .feature_photo {
         width: 100%;
-        height: 565px;
+        max-height: 565px;
         overflow: hidden;
         position: relative;
 
         img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
 
         }
     }
@@ -404,7 +428,7 @@
     .box_button {
         box-shadow: 0px 4px 90px rgba(175, 173, 181, 0.2);
         position: absolute;
-        right: 48px;
+        right: 15px;
 
         .btn_group {
             
@@ -418,7 +442,7 @@
 
 .box_title_articles {
     position: absolute;
-    bottom: 250px;
+    bottom: 100px;
     left: 40px;
     
     .cate_articles {
@@ -446,6 +470,7 @@
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 1;
+            color: #FFFFFF;
             -webkit-box-orient: vertical;
         }
     }
@@ -468,7 +493,7 @@
 
     .blog_picture{
         width: 100%;
-        margin-right: 50px;
+        flex-shrink: 1;
 
         img {
            width: 100%;
@@ -478,10 +503,19 @@
 }
 
 .small_blog {
-    margin-bottom: 30px;
+
+    &:nth-child(2) {
+        margin-top: 30px;
+    }
+    
+    &:nth-child(3) {
+        margin-top: 30px;
+    }
 }
 
 .detail_blog {
+    margin-left: 50px;
+    flex-shrink: 1;
 
     .cate_blog {
 
@@ -609,13 +643,14 @@
 
     ///////End: Banner//////////
     
-    ///////Start: Archivement//////////////
+    /*===============Start Our Product ============*/
     
     
 
     .box_about_product  {
 
         .content_product {
+           
             
             .des_our_product {
                 margin-top: 50px;
@@ -633,9 +668,10 @@
                 margin-top: 50px;
             }
         }
+
     }
 
-    ///////End: Archivement//////////////
+    ///////End: Our Product //////////////
 
     
     ////////////Start: Article/////////////
